--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -1,9 +1,130 @@
-#content {
-  margin-left: auto;
-  margin-right: auto;
-  width: 650px;
-}
+@import url('https://fonts.googleapis.com/css2?family=Bitter:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap');
+/* font-family: 'Montserrat', sans-serif;*/
+@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap');
 
-#greeting-container {
-  margin-top: 20px;
+body
+{
+    background-color: rgb(248, 246, 239);
+    padding: 20px;
+}
+/* Nav bar styling */
+#nav-bar
+{
+    display: flex;
+    justify-content: space-between;
+    padding: 38px;
+}
+.heading
+{
+    font-family: 'Bitter', serif;
+    text-align: center;
+    font-size: 30px;
+    justify-content: center;
+}
+#social
+{
+    margin-right: 70px;
+}
+.logos
+{
+    display: flex; 
+    margin-top: 30px;
+}
+.logos img
+{
+    width: 30px;
+    height: auto;
+    margin-right: 30px;
+}
+#left-side
+{
+    margin-top: 32px;
+    margin-left: 90px;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 12px;
+    display: flex;
+}
+.link
+{
+    border-bottom: 0.5px solid transparent; 
+    transition: border-bottom 0.5s;
+    margin-right: 20px;
+}
+.link a
+{
+    color: black;
+    text-decoration: none;
+    transition: color 0.5s;
+}
+.link:hover
+{
+    border-bottom: 1px solid  black;
+}
+.link a:hover 
+{
+    color:  black;
+}
+/* Card */
+.body-card
+{
+    padding: 20px;
+    font-family: 'Montserrat', sans-serif;
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.card-container
+{
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.card
+{
+    min-height: 50vh;
+    width: 35rem;
+    box-shadow: 0 20px 20px black, 0px 0px 50px black;
+    padding: 0rem 5rem;
+}
+.me
+{
+    min-height: 35vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.me img
+{
+    width: 15rem;
+    z-index: 2;
+}
+.circle
+{
+    width: 15rem;
+    height: 15rem;
+    background: linear-gradient(to right,#e0c9bb,#bbcde0);
+    position: absolute;
+    border-radius: 50%;
+}
+h1
+{
+    font-family: 'Abril Fatface', cursive;
+    background-color:rgb(248, 246, 239);
+    background-image: linear-gradient(45deg, #e0c9bb, #bbcde0);
+    background-size: 100%;
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent; 
+    -moz-text-fill-color: transparent;
+}
+p
+{
+    padding: 30px;
+}
+h2
+{
+    padding: 20px;
 }
