--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap');
 /* font-family: 'Montserrat', sans-serif;*/
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap');
 
 html {
     scroll-behavior: smooth;
@@ -15,7 +16,6 @@ body
     transform-style: preserve-3d;
     overflow-y: scroll;
     overflow-x: hidden;
-
 }
 /* Nav bar styling */
 #nav-bar
@@ -192,7 +192,7 @@ body
     border-radius: 4px;
     transition: .6s;
     overflow: hidden;
-    padding: 20px;
+    padding: 30px;
 }
 
 /* Skills */
@@ -243,11 +243,55 @@ body
 {
     padding: 15px;
     display: flex;
-    grid-template-columns: repeat(auto-fit, minimax(200px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     grid-gap: 20px;
 }
 .gallery-container img
 {
-    width: 450px;
+    width: 550px;
     border-radius: 20px;
+}
+/* Servet and js*/
+#show-hello-world
+{
+    padding: 20px; 
+}
+.description
+{
+    font-family: 'Dancing Script', cursive;
+    font-size: 30px;
+    padding: 30px;
+}
+.headi
+{
+    font-family: 'Abril Fatface', cursive;
+    font-size: 30px;
+    padding: 30px;
+    background-color:rgb(248, 246, 239);
+    background-image: linear-gradient(45deg, #F1AC88FF, #783937FF);
+    background-size: 100%;
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent; 
+    -moz-text-fill-color: transparent;
+}
+.travel-grid
+{
+    position: absolute;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+    width: 100vw;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 300px));
+    column-gap: 10px;
+    row-gap: 10px;
+    padding: 40px;
+}
+.travel-grid img
+{
+    width: 300px;
+    height: 300px;
+    object-fit: cover;
+    object-position: center;
 }
